@@ -7,6 +7,7 @@ Version 0.2
 (codename to be selected, release date to be announced)
 
 - Added `AnyConverter` to the routing system.
+- Added `werkzeug.contrib.securecookie`
 
 
 Version 0.1
